--- a/cursus/static/css/index.css
+++ b/cursus/static/css/index.css
@@ -1,9 +1,87 @@
+:root {
+  /* CSS gutters for margin, padding, gap, etc. */
+  --cursus-gutter-1:  0.25rem;      /* 4px */
+  --cursus-gutter-2:  0.5rem;       /* 8px */
+  --cursus-gutter-3:  0.75rem;      /* 12px */
+  --cursus-gutter-4:  1rem;         /* 16px */
+  --cursus-gutter-5:  1.25rem;      /* 20px */
+  --cursus-gutter-6:  1.5rem;       /* 24px */
+  --cursus-gutter-7:  1.75rem;      /* 28px */
+  --cursus-gutter-8:  2rem;         /* 32px */
+  --cursus-gutter-9:  2.25rem;      /* 36px */
+  --cursus-gutter-10: 2.5rem;       /* 40px */
+  --cursus-gutter-11: 2.75rem;      /* 44px */
+  --cursus-gutter-12: 3rem;         /* 48px */
+  --cursus-gutter-13: 3.25rem;      /* 52px */
+  --cursus-gutter-14: 3.5rem;       /* 56px */
+  --cursus-gutter-15: 3.75rem;      /* 60px */
+  --cursus-gutter-16: 4rem;         /* 64px */
+  --cursus-gutter-17: 4.25rem;      /* 68px */
+  --cursus-gutter-18: 4.5rem;       /* 72px */
+  --cursus-gutter-19: 4.75rem;      /* 76px */
+  --cursus-gutter-20: 5rem;         /* 80px */
+  --cursus-gutter-21: 5.25rem;      /* 84px */
+  --cursus-gutter-22: 5.5rem;       /* 88px */
+  --cursus-gutter-23: 5.75rem;      /* 92px */
+  --cursus-gutter-24: 6rem;         /* 96px */
+
+  /* CSS breakpoints for responsiveness */
+  --cursus-breakpoint-sm: 640px;
+  --cursus-breakpoint-md: 768px;
+  --cursus-breakpoint-lg: 1024px;
+  --cursus-breakpoint-xl: 1280px;
+  --cursus-breakpoint-2xl: 1536px;
+
+  /* CSS font weights */
+  --cursus-font-thin: 100;
+  --cursus-font-extralight: 200;
+  --cursus-font-light: 300;
+  --cursus-font-normal: 400;
+  --cursus-font-medium: 500;
+  --cursus-font-semibold: 600;
+  --cursus-font-bold: 700;
+  --cursus-font-extrabold: 800;
+  --cursus-font-black: 900;
+
+  /* CSS font families */
+  --cursus-font-sans: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --cursus-font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --cursus-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+
+  /* CSS font size */
+  --cursus-font-xs: 0.75rem;    /* 12px */
+  --cursus-font-sm: 0.875rem;   /* 14px */
+  --cursus-font-base: 1rem;     /* 16px */
+  --cursus-font-lg: 1.125rem;   /* 18px */
+  --cursus-font-xl: 1.25rem;    /* 20px */
+  --cursus-font-2xl: 1.5rem;    /* 24px */
+  --cursus-font-3xl: 1.875rem;  /* 30px */
+  --cursus-font-4xl: 2rem;      /* 32px */
+
+  /* CSS color system */
+  --cursus-color-white: 255 255 255;
+  --cursus-color-black: 0 0 0;
+  --cursus-color-primary: 100 103 242;
+
+}
+
 *, *::before, *::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-html, body {
+html {
   font-size: 16px;
+  line-height: 1.5;
+  tab-size: 4;
+  font-family: var(--cursus-font-sans);
+  font-feature-settings: "cv02", "cv03", "cv04", "cv11";
+  font-variation-settings: normal;
+}
+
+/* normalize anchor tag */
+a {
+  color: inherit;
+  text-decoration: inherit;
 }
