--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -13,17 +13,21 @@
     <title>{% block title %}{% endblock %} - Cursus</title>
 
     <!-- CSS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="/static/css/index.css" />
-    <style>
-      body {
-        font-family: Arial, Helvetica, sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="/static/css/_navbar.css" />
+
     {% endblock %}
   </head>
   <body>
+    <!-- Navbar -->
     {% import 'macros/navbar.html' as navbar %}
-    {{ navbar.navbar() }}
+    {{ navbar.navbar(page_name) }}
+
+    <!-- Main -->
     <main>{% block main %}{% endblock %}</main>
   </body>
 </html>
