--- a/cursus/templates/demo.html
+++ b/cursus/templates/demo.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
-{% block title %}About{% endblock %}
+{% block title %}Demo{% endblock %}
 {% block main %}
 {{ super() }}
-<h1>About</h1>
+<h1>Demo</h1>
 {% endblock %}
 
