--- a/cursus/templates/login.html
+++ b/cursus/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
-{% block title %}About{% endblock %}
+{% block title %}Login{% endblock %}
 {% block main %}
 {{ super() }}
-<h1>About</h1>
+<h1>Login</h1>
 {% endblock %}
 
