feat: add hero section in home page

--- a/cursus/static/css/_navbar.css
+++ b/cursus/static/css/_navbar.css
@@ -102,6 +102,10 @@
   color: var(--cursus-color-whit, white);
 }
 
+.navbar__pill:hover {
+  background-color: rgb(var(--cursus-color-primary--hover) / 1);
+}
+
 
 @media screen and (min-width: 768px) {
   .navbar__wrapper {
