--- a/cursus/static/css/index.css
+++ b/cursus/static/css/index.css
@@ -45,7 +45,7 @@
 
   /* CSS font families */
   --cursus-font-sans: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --cursus-font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --cursus-font-serif: "Playfair Display", ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --cursus-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
   /* CSS font size */
@@ -62,6 +62,7 @@
   --cursus-color-white: 255 255 255;
   --cursus-color-black: 0 0 0;
   --cursus-color-primary: 100 103 242;
+  --cursus-color-primary--hover: 90 93 226;
 
 }
 
