--- a/cursus/static/css/index.css
+++ b/cursus/static/css/index.css
@@ -81,6 +81,10 @@ html {
   font-variation-settings: normal;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /* normalize anchor tag */
 a {
   color: inherit;
