--- a/cursus/templates/index.html
+++ b/cursus/templates/index.html
@@ -14,4 +14,19 @@
     </div>
   </div>
 </section>
+<div class="hero__card">
+  <img
+    class="hero__card__dot-1"
+    src="/static/img/dot-grid-512.png"
+    alt="dot-grid-512"
+  />
+  <div class="hero__content">
+    <h1 class="hero__heading-1">About</h1>
+    <p class="hero__paragraph">
+      This is a public API that allows you to query for universities and courses
+      information. The database provides information over 1000 universities
+      globally.
+    </p>
+  </div>
+</div>
 {% endblock %}
