--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -34,7 +34,7 @@
     {% import 'macros/navbar.html' as navbar %} {{ navbar.navbar(page_name) }}
 
     <!-- Main -->
-    <main>{% block main %}{% endblock %}</main>
+    <main style="padding-top: 72px">{% block main %}{% endblock %}</main>
     {% block js %} {% endblock %}
   </body>
 </html>
