--- a/cursus/static/css/index.css
+++ b/cursus/static/css/index.css
@@ -63,6 +63,7 @@
   --cursus-color-black: 0 0 0;
   --cursus-color-primary: 100 103 242;
   --cursus-color-primary--hover: 90 93 226;
+  --cursus-color-sky: 13 162 231;
 
 }
 
