--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="/static/css/index.css" />
     <link rel="stylesheet" href="/static/css/_grid.css" />
     <link rel="stylesheet" href="/static/css/_navbar.css" />
+    <link rel="stylesheet" href="/static/css/_button.css" />
     {% endblock %} {% endblock %}
   </head>
   <body>
