--- a/cursus/templates/index.html
+++ b/cursus/templates/index.html
@@ -21,12 +21,70 @@
     alt="dot-grid-512"
   />
   <div class="hero__content">
-    <h1 class="hero__heading-1">About</h1>
+    <h1 class="hero__heading-1">What this API offers</h1>
     <p class="hero__paragraph">
-      This is a public API that allows you to query for universities and courses
-      information. The database provides information over 1000 universities
-      globally.
+      This is a public, free-to-use API that allows you to query for
+      universities and courses information. The database provides information
+      over 1000 universities globally.
     </p>
+    <p class="hero__paragraph">
+      With this API, you can query for universities, their domains, their
+      country, their history as well as the courses they offer.
+    </p>
+    <div class="hero__table">
+      <div class="hero__row">
+        <div class="hero__col">
+          <h2 class="hero__heading-2">University</h2>
+          <p class="hero__paragraph">
+            A variety of endpoints that allow you to find and retrieve
+            information about universities based on institution, campuse, etc.
+          </p>
+        </div>
+        <div class="hero__col">
+          <h2 class="hero__heading-2">Departments &amp; Courses</h2>
+          <p class="hero__paragraph">
+            Search for courses and departments' information based on the name,
+            the university, the department, etc.
+          </p>
+        </div>
+      </div>
+      <div class="hero__row">
+        <div class="hero__col">
+          <h2 class="hero__heading-2">Domains &amp; Campusus</h2>
+          <p class="hero__paragraph">
+            Find your university's domain and campus information for a nice and
+            easy integration with your application.
+          </p>
+        </div>
+        <div class="hero__col">
+          <h2 class="hero__heading-2">Biography</h2>
+          <p class="hero__paragraph">
+            Get to know more about the founders, and the history of your
+            universities.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="hero__tryout">
+  <div class="hero__table">
+    <div class="hero__row">
+      <div class="hero__col">
+        <h1 class="hero__heading-1">Want more?</h1>
+        <p class="hero__paragraph">Check out on GitHub for more details.</p>
+      </div>
+      <div class="hero__col">
+        <h1 class="hero__heading-1">&nbsp;</h1>
+        <a
+          href="/docs"
+          class="btn btn--fluid btn--round"
+          target="_blank"
+          style="--cursus-btn-text: 77 69 230; --cursus-btn-bg: 224 231 255"
+          >GITHUB</a
+        >
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
