feat: finish index page with footer

--- a/cursus/static/css/_grid.css
+++ b/cursus/static/css/_grid.css
@@ -8,18 +8,710 @@
   padding-right: 1rem;
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col-auto {
+  flex: 1 1 0;
+  width: auto;
+}
+
+.col-1 {
+  flex: 0 0 auto;
+  width: 8.3333333333%;
+}
+
+.col-2 {
+  flex: 0 0 auto;
+  width: 16.6666666667%;
+}
+
+.col-3 {
+  flex: 0 0 auto;
+  width: 25%;
+}
+
+.col-4 {
+  flex: 0 0 auto;
+  width: 33.3333333333%;
+}
+
+.col-5 {
+  flex: 0 0 auto;
+  width: 41.6666666667%;
+}
+
+.col-6 {
+  flex: 0 0 auto;
+  width: 50%;
+}
+
+.col-7 {
+  flex: 0 0 auto;
+  width: 58.3333333333%;
+}
+
+.col-8 {
+  flex: 0 0 auto;
+  width: 66.6666666667%;
+}
+
+.col-9 {
+  flex: 0 0 auto;
+  width: 75%;
+}
+
+.col-10 {
+  flex: 0 0 auto;
+  width: 83.3333333333%;
+}
+
+.col-11 {
+  flex: 0 0 auto;
+  width: 91.6666666667%;
+}
+
+.col-12 {
+  flex: 0 0 auto;
+  width: 100%;
+}
+
+.gap-1 {
+  gap: var(--cursus-gutter-1, 0.25rem);
+}
+
+.gap-2 {
+  gap: var(--cursus-gutter-2, 0.5rem);
+}
+
+.gap-3 {
+  gap: var(--cursus-gutter-3, 0.75rem);
+}
+
+.gap-4 {
+  gap: var(--cursus-gutter-4, 1rem);
+}
+
+.gap-5 {
+  gap: var(--cursus-gutter-5, 1.25rem);
+}
+
+.gap-6 {
+  gap: var(--cursus-gutter-6, 1.5rem);
+}
+
+.gap-7 {
+  gap: var(--cursus-gutter-7, 1.75rem);
+}
+
+.gap-8 {
+  gap: var(--cursus-gutter-8, 2rem);
+}
+
+.gap-9 {
+  gap: var(--cursus-gutter-9, 2.25rem);
+}
+
+.gap-10 {
+  gap: var(--cursus-gutter-10, 2.5rem);
+}
+
+.gap-11 {
+  gap: var(--cursus-gutter-11, 2.75rem);
+}
+
+.gap-12 {
+  gap: var(--cursus-gutter-12, 3rem);
+}
+
+.gap-13 {
+  gap: var(--cursus-gutter-13, 3.25rem);
+}
+
+.gap-14 {
+  gap: var(--cursus-gutter-14, 3.5rem);
+}
+
+.gap-15 {
+  gap: var(--cursus-gutter-15, 3.75rem);
+}
+
+.gap-16 {
+  gap: var(--cursus-gutter-16, 4rem);
+}
+
+.gap-17 {
+  gap: var(--cursus-gutter-17, 4.25rem);
+}
+
+.gap-18 {
+  gap: var(--cursus-gutter-18, 4.5rem);
+}
+
+.gap-19 {
+  gap: var(--cursus-gutter-19, 4.75rem);
+}
+
+.gap-20 {
+  gap: var(--cursus-gutter-20, 5rem);
+}
+
+.gap-21 {
+  gap: var(--cursus-gutter-21, 5.25rem);
+}
+
+.gap-22 {
+  gap: var(--cursus-gutter-22, 5.5rem);
+}
+
+.gap-23 {
+  gap: var(--cursus-gutter-23, 5.75rem);
+}
+
+.gap-24 {
+  gap: var(--cursus-gutter-24, 6rem);
+}
+
+.items-start {
+  align-items: flex-start;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.items-end {
+  align-items: flex-end;
+}
+
+@media screen and (min-width: 640px) {
+  .container-sm {
+    max-width: 640px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .col-sm-1 {
+    flex: 0 0 auto;
+    width: 8.3333333333%;
+  }
+
+  .col-sm-2 {
+    flex: 0 0 auto;
+    width: 16.6666666667%;
+  }
+
+  .col-sm-3 {
+    flex: 0 0 auto;
+    width: 25%;
+  }
+
+  .col-sm-4 {
+    flex: 0 0 auto;
+    width: 33.3333333333%;
+  }
+
+  .col-sm-5 {
+    flex: 0 0 auto;
+    width: 41.6666666667%;
+  }
+
+  .col-sm-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+
+  .col-sm-7 {
+    flex: 0 0 auto;
+    width: 58.3333333333%;
+  }
+
+  .col-sm-8 {
+    flex: 0 0 auto;
+    width: 66.6666666667%;
+  }
+
+  .col-sm-9 {
+    flex: 0 0 auto;
+    width: 75%;
+  }
+
+  .col-sm-10 {
+    flex: 0 0 auto;
+    width: 83.3333333333%;
+  }
+
+  .col-sm-11 {
+    flex: 0 0 auto;
+    width: 91.6666666667%;
+  }
+
+  .col-sm-12 {
+    flex: 0 0 auto;
+    width: 100%;
+  }
+
+  .gap-sm-1 {
+    gap: var(--cursus-gutter-1, 0.25rem);
+  }
+
+  .gap-sm-2 {
+    gap: var(--cursus-gutter-2, 0.5rem);
+  }
+
+  .gap-sm-3 {
+    gap: var(--cursus-gutter-3, 0.75rem);
+  }
+
+  .gap-sm-4 {
+    gap: var(--cursus-gutter-4, 1rem);
+  }
+
+  .gap-sm-5 {
+    gap: var(--cursus-gutter-5, 1.25rem);
+  }
+
+  .gap-sm-6 {
+    gap: var(--cursus-gutter-6, 1.5rem);
+  }
+
+  .gap-sm-7 {
+    gap: var(--cursus-gutter-7, 1.75rem);
+  }
+
+  .gap-sm-8 {
+    gap: var(--cursus-gutter-8, 2rem);
+  }
+
+  .gap-sm-9 {
+    gap: var(--cursus-gutter-9, 2.25rem);
+  }
+
+  .gap-sm-10 {
+    gap: var(--cursus-gutter-10, 2.5rem);
+  }
+
+  .gap-sm-11 {
+    gap: var(--cursus-gutter-11, 2.75rem);
+  }
+
+  .gap-sm-12 {
+    gap: var(--cursus-gutter-12, 3rem);
+  }
+
+  .gap-sm-13 {
+    gap: var(--cursus-gutter-13, 3.25rem);
+  }
+
+  .gap-sm-14 {
+    gap: var(--cursus-gutter-14, 3.5rem);
+  }
+
+  .gap-sm-15 {
+    gap: var(--cursus-gutter-15, 3.75rem);
+  }
+
+  .gap-sm-16 {
+    gap: var(--cursus-gutter-16, 4rem);
+  }
+
+  .gap-sm-17 {
+    gap: var(--cursus-gutter-17, 4.25rem);
+  }
+
+  .gap-sm-18 {
+    gap: var(--cursus-gutter-18, 4.5rem);
+  }
+
+  .gap-sm-19 {
+    gap: var(--cursus-gutter-19, 4.75rem);
+  }
+
+  .gap-sm-20 {
+    gap: var(--cursus-gutter-20, 5rem);
+  }
+
+  .gap-sm-21 {
+    gap: var(--cursus-gutter-21, 5.25rem);
+  }
+
+  .gap-sm-22 {
+    gap: var(--cursus-gutter-22, 5.5rem);
+  }
+
+  .gap-sm-23 {
+    gap: var(--cursus-gutter-23, 5.75rem);
+  }
+
+  .gap-sm-24 {
+    gap: var(--cursus-gutter-24, 6rem);
+  }
+
+  .items-sm-start {
+    align-items: flex-start;
+  }
+
+  .items-sm-center {
+    align-items: center;
+  }
+
+  .items-sm-end {
+    align-items: flex-end;
+  }
+}
+
 @media screen and (min-width: 768px) {
-  .container {
+  .container-md {
     max-width: 768px;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+
+  .col-md-1 {
+    flex: 0 0 auto;
+    width: 8.3333333333%;
+  }
+
+  .col-md-2 {
+    flex: 0 0 auto;
+    width: 16.6666666667%;
+  }
+
+  .col-md-3 {
+    flex: 0 0 auto;
+    width: 25%;
+  }
+
+  .col-md-4 {
+    flex: 0 0 auto;
+    width: 33.3333333333%;
+  }
+
+  .col-md-5 {
+    flex: 0 0 auto;
+    width: 41.6666666667%;
+  }
+
+  .col-md-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+
+  .col-md-7 {
+    flex: 0 0 auto;
+    width: 58.3333333333%;
+  }
+
+  .col-md-8 {
+    flex: 0 0 auto;
+    width: 66.6666666667%;
+  }
+
+  .col-md-9 {
+    flex: 0 0 auto;
+    width: 75%;
+  }
+
+  .col-md-10 {
+    flex: 0 0 auto;
+    width: 83.3333333333%;
+  }
+
+  .col-md-11 {
+    flex: 0 0 auto;
+    width: 91.6666666667%;
+  }
+
+  .col-md-12 {
+    flex: 0 0 auto;
+    width: 100%;
+  }
+
+  .gap-md-1 {
+    gap: var(--cursus-gutter-1, 0.25rem);
+  }
+
+  .gap-md-2 {
+    gap: var(--cursus-gutter-2, 0.5rem);
+  }
+
+  .gap-md-3 {
+    gap: var(--cursus-gutter-3, 0.75rem);
+  }
+
+  .gap-md-4 {
+    gap: var(--cursus-gutter-4, 1rem);
+  }
+
+  .gap-md-5 {
+    gap: var(--cursus-gutter-5, 1.25rem);
+  }
+
+  .gap-md-6 {
+    gap: var(--cursus-gutter-6, 1.5rem);
+  }
+
+  .gap-md-7 {
+    gap: var(--cursus-gutter-7, 1.75rem);
+  }
+
+  .gap-md-8 {
+    gap: var(--cursus-gutter-8, 2rem);
+  }
+
+  .gap-md-9 {
+    gap: var(--cursus-gutter-9, 2.25rem);
+  }
+
+  .gap-md-10 {
+    gap: var(--cursus-gutter-10, 2.5rem);
+  }
+
+  .gap-md-11 {
+    gap: var(--cursus-gutter-11, 2.75rem);
+  }
+
+  .gap-md-12 {
+    gap: var(--cursus-gutter-12, 3rem);
+  }
+
+  .gap-md-13 {
+    gap: var(--cursus-gutter-13, 3.25rem);
+  }
+
+  .gap-md-14 {
+    gap: var(--cursus-gutter-14, 3.5rem);
+  }
+
+  .gap-md-15 {
+    gap: var(--cursus-gutter-15, 3.75rem);
+  }
+
+  .gap-md-16 {
+    gap: var(--cursus-gutter-16, 4rem);
+  }
+
+  .gap-md-17 {
+    gap: var(--cursus-gutter-17, 4.25rem);
+  }
+
+  .gap-md-18 {
+    gap: var(--cursus-gutter-18, 4.5rem);
+  }
+
+  .gap-md-19 {
+    gap: var(--cursus-gutter-19, 4.75rem);
+  }
+
+  .gap-md-20 {
+    gap: var(--cursus-gutter-20, 5rem);
+  }
+
+  .gap-md-21 {
+    gap: var(--cursus-gutter-21, 5.25rem);
+  }
+
+  .gap-md-22 {
+    gap: var(--cursus-gutter-22, 5.5rem);
+  }
+
+  .gap-md-23 {
+    gap: var(--cursus-gutter-23, 5.75rem);
+  }
+
+  .gap-md-24 {
+    gap: var(--cursus-gutter-24, 6rem);
+  }
+
+  .items-md-start {
+    align-items: flex-start;
+  }
+
+  .items-md-center {
+    align-items: center;
+  }
+
+  .items-md-end {
+    align-items: flex-end;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-  .container {
+  .container-lg {
     max-width: 1024px;
     padding-left: 2rem;
     padding-right: 2rem;
   }
+
+  .col-lg-1 {
+    flex: 0 0 auto;
+    width: 8.3333333333%;
+  }
+
+  .col-lg-2 {
+    flex: 0 0 auto;
+    width: 16.6666666667%;
+  }
+
+  .col-lg-3 {
+    flex: 0 0 auto;
+    width: 25%;
+  }
+
+  .col-lg-4 {
+    flex: 0 0 auto;
+    width: 33.3333333333%;
+  }
+
+  .col-lg-5 {
+    flex: 0 0 auto;
+    width: 41.6666666667%;
+  }
+
+  .col-lg-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+
+  .col-lg-7 {
+    flex: 0 0 auto;
+    width: 58.3333333333%;
+  }
+
+  .col-lg-8 {
+    flex: 0 0 auto;
+    width: 66.6666666667%;
+  }
+
+  .col-lg-9 {
+    flex: 0 0 auto;
+    width: 75%;
+  }
+
+  .col-lg-10 {
+    flex: 0 0 auto;
+    width: 83.3333333333%;
+  }
+
+  .col-lg-11 {
+    flex: 0 0 auto;
+    width: 91.6666666667%;
+  }
+
+  .col-lg-12 {
+    flex: 0 0 auto;
+    width: 100%;
+  }
+
+  .gap-lg-1 {
+    gap: var(--cursus-gutter-1, 0.25rem);
+  }
+
+  .gap-lg-2 {
+    gap: var(--cursus-gutter-2, 0.5rem);
+  }
+
+  .gap-lg-3 {
+    gap: var(--cursus-gutter-3, 0.75rem);
+  }
+
+  .gap-lg-4 {
+    gap: var(--cursus-gutter-4, 1rem);
+  }
+
+  .gap-lg-5 {
+    gap: var(--cursus-gutter-5, 1.25rem);
+  }
+
+  .gap-lg-6 {
+    gap: var(--cursus-gutter-6, 1.5rem);
+  }
+
+  .gap-lg-7 {
+    gap: var(--cursus-gutter-7, 1.75rem);
+  }
+
+  .gap-lg-8 {
+    gap: var(--cursus-gutter-8, 2rem);
+  }
+
+  .gap-lg-9 {
+    gap: var(--cursus-gutter-9, 2.25rem);
+  }
+
+  .gap-lg-10 {
+    gap: var(--cursus-gutter-10, 2.5rem);
+  }
+
+  .gap-lg-11 {
+    gap: var(--cursus-gutter-11, 2.75rem);
+  }
+
+  .gap-lg-12 {
+    gap: var(--cursus-gutter-12, 3rem);
+  }
+
+  .gap-lg-13 {
+    gap: var(--cursus-gutter-13, 3.25rem);
+  }
+
+  .gap-lg-14 {
+    gap: var(--cursus-gutter-14, 3.5rem);
+  }
+
+  .gap-lg-15 {
+    gap: var(--cursus-gutter-15, 3.75rem);
+  }
+
+  .gap-lg-16 {
+    gap: var(--cursus-gutter-16, 4rem);
+  }
+
+  .gap-lg-17 {
+    gap: var(--cursus-gutter-17, 4.25rem);
+  }
+
+  .gap-lg-18 {
+    gap: var(--cursus-gutter-18, 4.5rem);
+  }
+
+  .gap-lg-19 {
+    gap: var(--cursus-gutter-19, 4.75rem);
+  }
+
+  .gap-lg-20 {
+    gap: var(--cursus-gutter-20, 5rem);
+  }
+
+  .gap-lg-21 {
+    gap: var(--cursus-gutter-21, 5.25rem);
+  }
+
+  .gap-lg-22 {
+    gap: var(--cursus-gutter-22, 5.5rem);
+  }
+
+  .gap-lg-23 {
+    gap: var(--cursus-gutter-23, 5.75rem);
+  }
+
+  .gap-lg-24 {
+    gap: var(--cursus-gutter-24, 6rem);
+  }
+
+  .items-lg-start {
+    align-items: flex-start;
+  }
+
+  .items-lg-center {
+    align-items: center;
+  }
+
+  .items-lg-end {
+    align-items: flex-end;
+  }
 }
+
+
