--- a/cursus/templates/about.html
+++ b/cursus/templates/about.html
@@ -1,7 +1,9 @@
-{% extends "_base.html" %}
-{% block title %}About{% endblock %}
-{% block main %}
+{% extends "_base.html" %} {% block title %}About{% endblock %} {% block css %}
 {{ super() }}
-<h1>About</h1>
+<link rel="stylesheet" href="/static/css/_about.css" />
+{% endblock %} {% block main %} {{ super() }}
+<div class="about__banner">
+  <div class="about__banner-text">About Cursus</div>
+</div>
+<section class=""></section>
 {% endblock %}
-
