--- a/cursus/templates/about.html
+++ b/cursus/templates/about.html
@@ -73,6 +73,10 @@
     Cursus can do.
   </p>
   <p>Or, you can try it out live <a href="/demo">demonstration</a>.</p>
+  <h1>Credits</h1>
+  <ul>
+    <li>UIcons by <a href="https://www.flaticon.com/uicons">Flaticon</a></li>
+  </ul>
 </section>
 
 {% endblock %}
