--- a/cursus/static/css/_docs.css
+++ b/cursus/static/css/_docs.css
@@ -45,3 +45,73 @@
   color: rgb(var(--cursus-color-black) / 0.6);
 }
 
+.docs__card-wrapper {
+  position: relative;
+  z-index: 1;
+  display: grid;
+
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+
+  max-width: 1024px;
+  width: 100%;
+
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.docs__card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+
+  position: relative;
+  background: rgb(var(--cursus-color-white));
+  border-radius: 0.5rem;
+  box-shadow: 0 0 0 1px rgb(var(--cursus-color-black) / 0.1), 0 2px 4px rgb(var(--cursus-color-black) / 0.1);
+  padding: 2rem;
+  transition: all 0.2s ease-in-out;
+
+  width: 100%;
+  height: 100%;
+}
+
+.docs__card:hover {
+  box-shadow: 0 0 0 1px rgb(var(--cursus-color-black) / 0.25), 0 8px 12px rgb(var(--cursus-color-black) / 0.25);
+  transform: translateY(-4px);
+}
+
+.docs__card__header {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+
+  margin-bottom: 2rem;
+}
+
+.docs__card__header > i[class^="fi"] {
+  display: inline-flex;
+  align-self: center;
+}
+
+.docs__card__header > i[class^="fi"]::before {
+  font-size: 20px;
+  color: rgb(var(--cursus-color-primary) / 1);
+}
+
+.docs__card__header > h2 {
+  font-size: 20px;
+  font-weight: var(--cursus-font-bold, 800);
+  line-height: 1.5;
+
+  color: rgb(var(--cursus-color-primary) / 1);
+}
+
+.docs__card > p, 
+.docs__card__content {
+  color: rgb(var(--cursus-color-black) / 0.6);
+}
+
