--- a/cursus/static/css/_grid.css
+++ b/cursus/static/css/_grid.css
@@ -543,6 +543,9 @@
     max-width: 1024px;
     padding-left: 2rem;
     padding-right: 2rem;
+
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .col-lg-1 {
