--- a/cursus/templates/doc-courses.html
+++ b/cursus/templates/doc-courses.html
@@ -2,10 +2,18 @@
 block css %} {{ super() }}
 <link rel="stylesheet" href="/static/css/_docs.css" />
 {% endblock %} {% block main %} {{ super() }}
-<div class="docs__banner">
+<div class="docs__banner docs__banner--courses">
   <h1 class="docs__banner__text">Courses</h1>
-  <h2 class="docs__banner__sub-text">
-    It&apos;s simple, easy and free to use.
-  </h2>
 </div>
+<section class="container-lg">
+  <div class="docs__breadcrumb">
+    <div class="docs__breadcrumb__container">
+      <a href="/" class="docs__breadcrumb__link">Home</a>
+      <p class="docs__breadcrumb__separator">/</p>
+      <a href="/docs" class="docs__breadcrumb__link">Docs</a>
+      <p class="docs__breadcrumb__separator">/</p>
+      <p>Courses</p>
+    </div>
+  </div>
+</section>
 {% endblock %}
