feat: add dropdown for navbar on mobile

--- a/cursus/templates/_base.html
+++ b/cursus/templates/_base.html
@@ -42,6 +42,7 @@
     {% block css %}
     <link rel="stylesheet" href="/static/css/index.css" />
     <link rel="stylesheet" href="/static/css/_grid.css" />
+    <link rel="stylesheet" href="/static/css/_dropdown.css" />
     <link rel="stylesheet" href="/static/css/_navbar.css" />
     <link rel="stylesheet" href="/static/css/_footer.css" />
     <link rel="stylesheet" href="/static/css/_button.css" />
@@ -57,5 +58,7 @@
 
     <!-- Footer -->
     {% import 'macros/footer.html' as footer %} {{ footer.footer() }}
+    <script src="/static/js/dropdown.js"></script>
+    <script src="/static/js/index.js"></script>
   </body>
 </html>
