--- a/cursus/static/css/_navbar.css
+++ b/cursus/static/css/_navbar.css
@@ -52,7 +52,7 @@
 }
 
 .navbar__collapse {
-  display: flex;
+  display: none;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -108,6 +108,69 @@
   background-color: rgb(var(--cursus-color-primary--hover) / 1);
 }
 
+.navbar__dropdown {
+  position: relative;
+  display: block;
+
+  margin-left: auto;
+  background: transparent;
+  cursor: pointer;
+}
+
+.navbar__dropdown__btn {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+
+  padding: 1rem;
+  border-radius: 6px;
+  background: transparent;
+  cursor: pointer;
+  outline: none;
+  border: none;
+}
+
+.navbar__dropdown[aria-expanded="true"] .navbar__dropdown__btn,
+.navbar__dropdown__btn:hover {
+  background: rgb(var(--cursus-color-primary--hover) / 0.1);
+}
+
+.navbar__dropdown__btn i {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  pointer-events: none; /* https://stackoverflow.com/a/57101211/12915739 */
+}
+
+.navbar__dropdown__menu {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  margin-top: 8px;
+  padding: 2rem;
+  border-radius: 6px;
+  background: rgb(var(--cursus-color-white) / 1);
+  border: 1px solid rgb(var(--cursus-color-black) / 0.1);
+  box-shadow: 0 0 0 1px rgb(var(--cursus-color-black) / 0.1), 0 4px 11px rgb(var(--cursus-color-black) / 0.18);
+
+  transform: translateY(0.5rem);
+  opacity: 0;
+  transition: transform 0.1s cubic-bezier(0.16, 1, 0.5, 1), opacity 0.1s cubic-bezier(0.16, 1, 0.5, 1);
+  -webkit-transition: transform 0.1s cubic-bezier(0.16, 1, 0.5, 1), opacity 0.1s cubic-bezier(0.16, 1, 0.5, 1);
+  -moz-transition: all 0.1s cubic-bezier(0.16, 1, 0.5, 1);
+  -o-transition: transform 0.1s cubic-bezier(0.16, 1, 0.5, 1), opacity 0.1s cubic-bezier(0.16, 1, 0.5, 1);
+}
+
+.navbar__dropdown__menu.dropdown--show {
+
+  transform: translateY(0rem);
+  opacity: 1;
+}
 
 @media screen and (min-width: 768px) {
   .navbar__wrapper {
@@ -128,7 +191,12 @@
   .navbar__collapse-left, 
   .navbar__collapse-right,
   .navbar__link {
+    display: flex;
     height: 100%;
+  }
+
+  .navbar__dropdown {
+    display: none;
   }
 }
 
